--- a/SMS/SMS/Views/Home/Index.cshtml
+++ b/SMS/SMS/Views/Home/Index.cshtml
@@ -1,31 +1,296 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
+﻿
+<title>School Management System</title>
+@{ Layout = null;}
+<head>
+    <meta charset="UTF-8" name="viewport" content="width-device=width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" href="~/css/bootstrap.css" />
+    <meta name="viewport" content="width=device-width height=device-height initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="~/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Work+Sans:300,400,500,700%7CZilla+Slab:300,400,500,700,700i%7CGloria+Hallelujah">
+    <link rel="stylesheet" href="~/css/bootstrap.css">
+    <link rel="stylesheet" href="~/css/fonts.css">
+    <link rel="stylesheet" href="~/css/style.css">
+    <style>
+        .ie-panel {
+            display: none;
+            background: #212121;
+            padding: 10px 0;
+            box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);
+            clear: both;
+            text-align: center;
+            position: relative;
+            z-index: 1;
+        }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+        html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {
+            display: block;
+        }
+    </style>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+
+
+    <style>
+        .ie-panel {
+            display: none;
+            background: #212121;
+            padding: 10px 0;
+            box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);
+            clear: both;
+            text-align: center;
+            position: relative;
+            z-index: 1;
+        }
+
+        html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {
+            display: block;
+        }
+    </style>
+
+    <style>
+        body {
+            font-family: Calisto MT;
+            margin: 0;
+        }
+
+        table {
+            font-family: Calisto MT, sans-serif;
+            border-collapse: collapse;
+            width: 70%;
+        }
+
+        td, th {
+            border: 1px solid #F0E68C;
+            text-align: center;
+            padding: 8px;
+        }
+
+        tr:nth-child(even) {
+            background-color: #FAFAD2;
+        }
+
+        /* Style the top navigation bar */
+        .navbar {
+            overflow: hidden;
+            background-color: #333;
+            font-family: Calisto MT;
+        }
+
+        #cmb {
+            text-align: center;
+            height: 40px;
+            width: 240px;
+            border: 1px solid transparent;
+            border-color: black;
+        }
+
+        .navbar a {
+            float: right;
+            font-size: 16px;
+            color: white;
+            text-align: center;
+            padding: 14px 17px;
+            text-decoration: none;
+        }
+
+
+        input {
+            border: none;
+            box-sizing: border-box;
+            border-bottom: 1px solid black;
+            background: transparent;
+            color: #b18757;
+            font-weight: bold;
+            font-family: 'Poppins';
+            font-size: 20px;
+        }
+
+        .submit {
+            width: 130px;
+            border-radius: 25px;
+            -moz-border-radius: 25px;
+            -webkit-border-radius: 25px;
+            text-transform: uppercase;
+            font-size: 13px;
+            cursor: pointer;
+        }
+
+        .submit-link {
+            border: 2px solid #b18757;
+            text-decoration: none;
+            display: inline-block;
+            vertical-align: middle;
+            padding: 12px 0;
+            text-align: center;
+        }
+
+            .submit-link:hover {
+                background: #FAFAD2;
+                color: #b18757;
+            }
+
+        .dropdown-content a:hover {
+            background-color: #ddd;
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        b {
+            color: #ECCF3E;
+            font-size: 19px;
+        }
+    </style>
+</head>
+
+<body>
+
+    <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="~/images/o.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
+    <div class="preloader">
+        <div class="preloader-logo">
+            <a class="brand" href="index.html"><img class="brand-logo-dark" src="~/images/_blank.png" alt="" width="245" height="50" /><img class="brand-logo-light" src="~/images/logo-inverse-245x50.png" alt="" width="245" height="50" /></a>
+        </div>
+        <div class="preloader-body">
+            <div class="cssload-container">
+                <div class="cssload-speeding-wheel"></div>
+            </div>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+    <div class="page">
+        <!-- Page Header-->
+        <header class="page-header">
+            <!-- RD Navbar-->
+            <div class="rd-navbar-wrap">
+                <nav class="rd-navbar rd-navbar-classic" data-layout="rd-navbar-fixed" data-sm-layout="rd-navbar-fixed">
+                    <div class="rd-navbar-main-outer">
+                        <div class="rd-navbar-main">
+                            <!-- RD Navbar Panel-->
+                            <div class="rd-navbar-panel">
+                                <!-- RD Navbar Toggle-->
+                                <!-- RD Navbar Brand-->
+
+                            </div>
+                            <div class="rd-navbar-nav-wrap">
+                                <!-- RD Navbar Nav    -->
+                                <ul class="rd-navbar-nav">
+                                    <li class="rd-nav-item active">
+                                        <a class="rd-nav-link" href="~/Views/Home/Index.cshtml">Home</a>
+                                    </li>
+                                    <li class="rd-nav-item">
+                                        <a class="rd-nav-link" href="about.html">About Us</a>
+                                    </li>
+                                    <li class="rd-nav-item">
+                                        <a class="rd-nav-link" href="~/Admin/Login">Login</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        <section>
+            <!-- Swiper-->
+            <div class="swiper-container swiper-slider swiper-slider-1" data-loop="false" data-autoplay="5000" data-simulate-touch="false">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide" data-slide-bg="../images/ol.jpg">
+                        <div class="swiper-slide-caption context-dark">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-md-10 col-lg-7">
+                                        <div class="box-animation">
+                                            <h6 data-caption-animate="slideInLeft" data-caption-delay="150">Quality Higher Education</h6>
+                                            <h2 data-caption-animate="slideInLeft" data-caption-delay="300">
+                                                Any Successful Career Starts  <span class="text-italic font-weight-bold">With Good Education</span>
+                                            </h2>
+                                            <div class="button-block" data-caption-animate="fadeInUp" data-caption-delay="450">
+                                                <a class="button button-primary-gradient"
+                                                   ="#"><span>sign in for excursion</span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide" data-slide-bg="../images/op.jpg">
+                        <div class="swiper-slide-caption context-dark">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-md-10 col-lg-7">
+                                        <div class="box-animation">
+                                            <h6 data-caption-animate="slideInLeft" data-caption-delay="150">A variety of programs</h6>
+                                            <h2 data-caption-animate="slideInLeft" data-caption-delay="300">
+                                                Providing Students with  <span class="text-italic font-weight-bold">Professional Education</span>
+                                            </h2>
+                                            <div class="button-block" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button button-primary-gradient" href="#"><span>sign in for excursion</span></a></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide" data-slide-bg="../images/s.jpeg">
+                        <div class="swiper-slide-caption context-dark">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-md-10 col-lg-7">
+                                        <div class="box-animation">
+                                            <h6 data-caption-animate="slideInLeft" data-caption-delay="150">Campus Community</h6>
+                                            <h2 data-caption-animate="slideInLeft" data-caption-delay="300">
+                                                Better educational environment <span class="text-italic font-weight-bold">for kids</span>
+                                            </h2>
+                                            <div class="button-block" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button button-primary-gradient" href="#"><span>sign in for excursion</span></a></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </section>
+        <!-- A Few Words About Me-->
+
+
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+    <div class="snackbars" id="form-output-global"></div>
+    <script src="~/js/core.min.js"></script>
+    <script src="~/js/script.js"></script>
+    <br>
+
+    <h2 style="color  :#b18757; font-family : Calisto MT">&emsp; &emsp; Welcome to ABC School System </h2>
+    <br>
+    <h3 style="color  :#ECCF3E; font-family : Calisto MT">
+        &emsp; &emsp;&emsp; &emsp; &emsp; &emsp; I would like to take this opportunity to welcome you, through our website, to
+        <br /> &emsp;&emsp;&emsp;&emsp;&nbsp;ABC School System.<br /> &emsp;&emsp;&emsp;&emsp; It will provide you with a range of information from our vision, aims and curriculum to our <br /> &emsp;&emsp;&emsp;&emsp;policies and practice.
+    </h3>
+    <h3 style="color  :orange; font-family : Calisto MT"> &emsp; &emsp; &emsp;&nbsp;Our Values</h3>
+    <h3 style="color  :#ECCF3E; font-family : Calisto MT">
+        &emsp; &emsp;&emsp; &emsp;  Our 8 values are at the heart of our school.
+    </h3>
+    &emsp; &emsp;&emsp; &emsp;       <ul style="color  :#ECCF3E; font-family : Calisto MT">
+        <li>&emsp;&emsp; &emsp;&emsp; &emsp;&emsp;  Creativity</li>
+        <li>&emsp; &emsp; &emsp;&emsp;&emsp; &emsp;Pride</li>
+        <li>&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;Responsibility</li>
+        <li> &emsp;&emsp;&emsp; &emsp;&emsp; &emsp;Confidence</li>
+        <li> &emsp; &emsp;&emsp; &emsp;&emsp;&emsp;&nbsp;Perseverance</li>
+        <li>&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;Teamwork</li>
+        <li> &emsp; &emsp;&emsp; &emsp;&emsp;&emsp;&nbsp;Aspiration</li>
+        <li>&emsp; &emsp; &emsp;&emsp;&emsp; &emsp;Enjoyment</li>
+
+    </ul>
+    <h3 style="color  :#ECCF3E; font-family : Calisto MT">
+        &emsp; &emsp;&emsp; &emsp;
+
+        <br />
+        &emsp; &emsp;&emsp; &emsp;
+        Through these values we strive to ensure your child’s first steps on the ladder of education are
+        happy and rewarding.
+    </h3>
+    <br><br><br><br>
+
+</body>
